--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 .cover_cont {
     height: 70vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
