--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 body {
     background-color: #fff;
 }
+
+.uk-container {
+    max-width: 80% !important;
+}
+
 .cover_cont {
     height: 70vh;
     width: 100%;
