--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --bg-color: hsl(49 37% 94%);
+    --typewriterSpeed: 6s;
+    --typewriterCharacters: 24;
+}
+
 *,
 * {
     margin: 0;
@@ -5,8 +11,16 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 40px;
+    font-family: "Montserrat";
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
 body {
-    background-color: #fff;
+    background-image: linear-gradient(to bottom, #ffffff, wheat);
+    overflow-x: hidden;
 }
 
 .uk-container {
@@ -14,7 +28,7 @@ body {
 }
 
 .cover_cont {
-    height: 70vh;
+    height: 92vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -42,9 +56,72 @@ body {
 }
 
 .cover-head {
-    font-size: 5rem;
-    /* margin: 0; */
     z-index: 10;
-    color: white !important;
+    color: wheat !important;
     position: relative;
+}
+
+.scroll-down {
+    height: 50px;
+    width: 30px;
+    border: 2px solid wheat;
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -100%) rotate(45deg);
+    border: 2px solid wheat;
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+    top: 30%;
+    animation-delay: 0.3s;
+}
+
+@keyframes scroll-down {
+    0% {
+        /* top:20%; */
+        opacity: 0;
+    }
+    30% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        top: 90%;
+        opacity: 0;
+    }
+}
+
+#typewriter {
+    color: wheat;
+    font-weight: bold;
+}
+
+#cursor {
+    color: wheat;
+    animation: blink 1s linear infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 100%;
+    }
+    50% {
+        opacity: 0%;
+    }
 }
