changed about page

--- a/css/about.css
+++ b/css/about.css
@@ -1,215 +1,8 @@
-/* ============= Achivements =========== */
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-
-.container {
-    width: 80%;
-    margin: auto;
-    padding-bottom: 5rem;
-}
-
-:root {
-    --transition: all 400ms ease;
-}
-
-.icon {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.about_achievements-left-image {
-    width: 40rem;
-    height: 50rem;
-}
-
-.about_achievements {
-    margin-top: 3rem;
-}
-
-.about_achievements-container {
-    display: grid;
-    grid-template-columns: 40% 60%;
-    gap: 5rem;
-}
-
-.about_achievements-right > p {
-    margin: 1.6rem 0 2.5rem;
-}
-
-.achievements_cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
-}
-
-.achievement_card {
-    background: rgb(143, 142, 152);
-    padding: 1rem;
-    border-radius: 1rem;
-    text-align: center;
-}
-
-.achievement_card:hover {
-    background: rgb(202, 201, 206);
-    box-shadow: 0 3rem 3rem rgb(0, 0, 0, 0.3);
-}
-
-.achievement_icon {
-    background: red;
-    padding: 0.6rem;
-    border-radius: 1rem;
-    display: inline-block;
-    margin-bottom: 2rem;
-    font-size: 2rem;
-}
-
-.achievement_icon .icon {
-    width: 3rem;
-    height: 3rem;
-}
-
-.achievement_card:nth-child(2) .achievement_icon {
-    background: yellow;
-}
-
-.achievement_card:nth-child(3) .achievement_icon {
-    background: green;
-}
-
-.achievement_card p {
-    margin-top: 1rem;
-}
-
-/* ============= Team =========== */
-
-.team > h2 {
-    padding-top: 5rem;
-    padding-bottom: 1rem;
-    text-align: center;
-    /* color: #fff; */
-}
-
-.team_container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
-}
-
-.team_member {
-    background: rgb(99, 99, 242);
-    padding: 2rem;
-    border: 1px solid transparent;
-    transition: var(--transition);
-    position: relative;
-    overflow: hidden;
-}
-
-.team_member-info > h4 {
-    color: #fff;
-}
-
-.team_member:hover {
-    background: transparent;
-    border-color: rgb(177, 170, 210);
-}
-
-.team_member-img img {
-    filter: saturate(0);
-}
-
-.team_member-img:hover img {
-    filter: saturate(1);
-}
-
-.team_member-info * {
-    text-align: center;
-    margin-top: 1.4rem;
-}
-
-.team_member-info p {
-    color: aliceblue;
-}
-
-.team_member-socials {
+.blob {
     position: absolute;
-    top: 11rem;
-    transform: translate(-50%);
-    right: -100%;
-    display: flex;
-    flex-direction: column;
-    background: white;
-    border-radius: 1rem 0 0 1rem;
-    box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
-    transition: var(--transition);
-}
-
-.team_member-socials a {
-    padding: 1rem;
-}
-
-.team_member:hover .team_member-info > h4, .team_member:hover .team_member-info > p {
-    color: black;
-}
-
-.team_member:hover .team_member-socials {
-    right: -2rem;
-}
-
-.team_member .icon {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-/* ============= MEDIA QUERIES (TABLETS) =========== */
-@media screen and (max-width: 1024px) {
-    .about_achievements {
-        margin-top: 2rem;
-    }
-
-    .about_achievements-container {
-        grid-template-columns: 1fr;
-        gap: 4rem;
-    }
-
-    .about_achievements-left {
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    .team_container {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1.5rem;
-    }
-
-    .team_member {
-        padding: 1rem;
-    }
-}
-
-/* ============= MEDIA QUERIES (TABLETS) =========== */
-@media screen and (max-width: 600px) {
-    .achievement_cards {
-        grid-template-columns: 1fr 1fr;
-        gap: 0.7rem;
-    }
-
-    .team_container {
-        grid-template-columns: 1fr 1fr;
-        gap: 0.7rem;
-    }
-
-    .team_member {
-        padding: 0;
-    }
-
-    .team_member p {
-        margin-bottom: 1.5rem;
-    }
+    top: -10%;
+    left: 0;
+    width: 100%;
+    height: 130%;
+    z-index: 0;
 }
