--- a/css/contact.css
+++ b/css/contact.css
@@ -3,9 +3,8 @@
     height: 1.5rem;
 }
 
-
 .contact_container {
-    margin: 10rem 5rem 0rem 5rem;
+    margin: 10rem 5rem 25rem 5rem;
     background-color: rgb(201, 202, 208);
     padding: 4rem;
     display: grid;
@@ -13,7 +12,7 @@
     gap: 4rem;
     height: 30rem;
     border-radius: 1rem;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .contact_aside {
